# cookiecutter-ros2-component-pkg

./: README.md  cookiecutter.json
{{cookiecutter.package_name}}/: CMakeLists.txt  package.xml
{{cookiecutter.package_name}}/include/{{cookiecutter.package_name}}/: visibility_control.h  {{cookiecutter.package_name}}.hpp
{{cookiecutter.package_name}}/launch/: {{cookiecutter.package_name}}.launch.py
{{cookiecutter.package_name}}/src/: parameters.yaml  {{cookiecutter.package_name}}.cpp
